--- a/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
+++ b/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
@@ -82,7 +82,7 @@
       <div class="flex flex-col flex-auto sm:mb-2 overflow-scroll sm:overflow-y-auto border shadow-xs rounded-sm bg-gray-50" [style.height]="gridHeight">
       <mat-table class="lmat-elevation-z8 "
                    #table
-                   [dataSource]="dataSource"
+                   [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
                    matSort
                    #sort1="matSort"
                    matSortActive="id"
@@ -144,8 +144,28 @@
 
           <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
         </mat-table>
-        <div class="mat-table__message" *ngIf="dataSource.data.length==0">No records found</div>
+
       </div>
+        <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
+            <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
+            Items per page:
+            <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+                        style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+                <mat-option [value]="5">5</mat-option>
+                <mat-option [value]="10">10</mat-option>
+                <mat-option [value]="25">25</mat-option>
+                <mat-option [value]="50">50</mat-option>
+            </mat-select>
+            <button (click)="paginate(1)">First</button>
+            <pagination-controls display="inline" (pageChange)="paginate($event)"
+                                 style="display: inline-block;"></pagination-controls>
+            <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
+            <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+
+        </div>
+
+<!--        <div class="mat-table__message" *ngIf="!loading && !matTableLenght">No records found</div>-->
+<!--        <div class="mat-table__message" *ngIf="loading">Please wait....</div>-->
 
     </div>
 
