--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -77,12 +77,11 @@
 
 
         <!-- Main -->
-        <div class="flex flex-auto  border shadow-xs rounded-sm bg-gray-50 overflow-scroll">
 
             <!-- Products list -->
-            <div class="flex flex-auto overflow-scroll" style="flex-direction: column;">
-                <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto"
-                     [style.height]="gridHeight">
+            <div class="flex flex-auto overflow-scroll shadow-xs rounded-sm bg-gray-50" style="flex-direction: column;" [style.height]="gridHeight">
+                <div class="flex flex-col flex-auto sm:mb-6"
+                     >
                     <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
                                matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
@@ -155,13 +154,12 @@
 
 
                 </div>
-                <div class="mat-table__bottom">
-                    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"></mat-paginator>
-                </div>
+
 
             </div>
 
-        </div>
-
+            <div class="mat-table__bottom">
+                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"></mat-paginator>
+            </div>
     </div>
 </div>
