--- a/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
+++ b/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
@@ -195,8 +195,8 @@
               <tbody class="">
                 <tr *ngFor="let GlSchemeCropDetails of GlSchemeCropDetailList;">
                   <td>{{GlSchemeCropDetails.GlSubCode}}</td>
-                  <td>{{GlSchemeCropDetails.GlSubCode}}</td>
-                  <td>{{GlSchemeCropDetails.GlSubCode}}</td>
+                  <td>{{GlSchemeCropDetails?.CropCode}}</td>
+                  <td>{{GlSchemeCropDetails?.SchemeCode}}</td>
                   <td>{{GlSchemeCropDetails.ParamName}}</td>
                 </tr>
               </tbody>
