--- a/src/app/modules/loan/orr-list/orr-list.component.html
+++ b/src/app/modules/loan/orr-list/orr-list.component.html
@@ -1,5 +1,5 @@
 <div class="px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  
+
   <!-- Header -->
 
   <div class="row pt-3">
@@ -23,6 +23,8 @@
 <div class="collapse show" id="collapseExample">
   <div class="card card-body">
     <div class="row">
+        <app-zone-branch-circle [form]="loanSearch" [should_show_circle]="false"
+                                (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
       <div class="col-lg-3 col-sm-12">
       <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
         <mat-label>Application Date(ddMMyyyy)</mat-label>
@@ -67,7 +69,7 @@
       </div>
   </div>
     </div>
-  </div> 
+  </div>
 </div>
   <div
   [formGroup]="loanSearch">
