--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -62,8 +62,8 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" *ngIf="PostCodeLov">
+            <div class="col-lg-3 col-sm-12" *ngIf="PostCodeLov">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" >
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Post Code <strong class="matMandatory">*</strong></mat-label>
                         <mat-select formControlName="PostCode" [disabled]="isFormReadonly">
@@ -81,8 +81,8 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" *ngIf="LandingProcedureLov">
+            <div class="col-lg-3 col-sm-12" *ngIf="LandingProcedureLov">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" >
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Lending Procedure <strong class="matMandatory"></strong></mat-label>
                         <mat-select formControlName="LandingProcedure" [disabled]="isFormReadonly">
