--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -9,7 +9,7 @@
 
     <div [formGroup]="addUpdateBenchMarkForm">
 
-        <div class="flex" style="flex-wrap: wrap;">
+        <div class="flex mt-3" style="flex-wrap: wrap;">
 
             <app-zone-branch-circle [form]="addUpdateBenchMarkForm" [should_show_circle]="true"
                                     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
