--- a/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
@@ -1,7 +1,7 @@
 <div class="px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-3xl mt-4 font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Loan Case Inquiry</div>
+  <div class="text-3xl mt-3 font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Loan Case Inquiry</div>
   <!-- Header -->
-  <div class="pt-4"
+  <div class="pt-2"
   [formGroup]="RecoveryForm">
 
   <div class="row">
@@ -25,7 +25,7 @@
       </mat-form-field>
     </div>
     <div class="col-lg-3 col-sm-12">
-        
+
     <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
       <mat-label class="customMatLabel">Loan Case #</mat-label>
       <input matInput placeholder="Enter Loan Case #" formControlName="LoanCaseNo" maxlength="30" autocomplete="off" />
@@ -40,10 +40,8 @@
   <div class="row">
 
     <div class="col-lg-3 col-sm-12">
-
-
-    <div class="flex flex-shrink-0 items-center mt-4 sm:mt-0 mb-2">
-      <button (click)="find()"  mat-flat-button [color]="'primary'">
+    <div class="flex flex-shrink-0 items-center mt-1 sm:mt-0 mb-2">
+      <button class="bg-gray-500" (click)="find()"  mat-flat-button [color]="'primary'">
         <mat-icon class="mr-2">search</mat-icon>Search
       </button>
     </div>
@@ -614,7 +612,7 @@
                   </table>
                 </div>
                 <h3 *ngIf="dynamicList.GetRescheduleActivity.length==0">Data not found.</h3>
-              </mat-tab>             
+              </mat-tab>
             </mat-tab-group>
           </div>
         </div>
