--- a/src/app/modules/loan/create-loan/create-loan.component.html
+++ b/src/app/modules/loan/create-loan/create-loan.component.html
@@ -1,9 +1,9 @@
 <div
-    class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    class=" px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">Loan Application
     </div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-3">
 
     </div>
 
