--- a/src/app/modules/loan/orr-list/orr-list.component.html
+++ b/src/app/modules/loan/orr-list/orr-list.component.html
@@ -22,10 +22,10 @@
 
 <div class="collapse show" id="collapseExample">
   <div class="card card-body">
-    <div class="row">
+      <div class="flex" style="flex-wrap: wrap;">
         <app-zone-branch-circle [form]="loanSearch" [should_show_circle]="false"
                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-      <div class="col-lg-3 col-sm-12">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
       <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
         <mat-label>Application Date(ddMMyyyy)</mat-label>
         <input readonly="readonly" matInput [matDatepicker]="picker3" placeholder="ddMMyyyy" autocomplete="off" formControlName="Appdt">
@@ -33,14 +33,14 @@
         <mat-datepicker #picker3></mat-datepicker>
       </mat-form-field>
   </div>
-  <div class="col-lg-3 col-sm-12">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
       <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
         <mat-label>LA File/Booklet#</mat-label>
         <input matInput placeholder="Enter >LA File/Booklet" formControlName="AppNo">
         <!--  <mat-error *ngIf="hasError('landName', 'required')">landName <strong>required</strong></mat-error>-->
       </mat-form-field>
     </div>
-    <div class="col-lg-3 col-sm-12">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
       <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
         <mat-label>Status</mat-label>
         <mat-select formControlName="Status">
@@ -54,20 +54,20 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="col-lg-3 col-sm-12">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
       <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
         <mat-label>Loan Case#</mat-label>
         <input matInput placeholder="Enter Loan Case Number" formControlName="LcNo">
         <!--  <mat-error *ngIf="hasError('landName', 'required')">landName <strong>required</strong></mat-error>-->
       </mat-form-field>
   </div>
-  <div class="col-lg-3 col-sm-12">
-      <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mb-2">
+
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
         <button (click)="searchLoan()" class="bg-gray-500" mat-flat-button [color]="'primary'">
           <span class="ml-2 mr-1">Search</span>
         </button>
       </div>
-  </div>
+
     </div>
   </div>
 </div>
