--- a/src/app/modules/loan/referback-loan-utilization/referback-loan-uti.component.html
+++ b/src/app/modules/loan/referback-loan-utilization/referback-loan-uti.component.html
@@ -1,10 +1,6 @@
-<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">List Loan Utilization</div>
+<div class=" px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+  <div class="heading">List Loan Utilization</div>
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8">
-    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-    </div>
-  </div>
 
   <!-- Main -->
   <div class="flex flex-auto overflow-y-scroll">
