--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -178,7 +178,7 @@
               <span (click)="onEditPurpose(loan.GlSubID)"
                     style="cursor: pointer;
                       color: #ecbd00;font-size: 16px;">Edit</span> |
-              <span style="cursor: pointer; color: #ecbd00;font-size: 16px;" (click)="onDeletePurpose(loan.GlSubID)">Delete</span>
+              <span style="cursor: pointer; color: #ecbd00;font-size: 16px;" (click)="onDeletePurpose(loan)">Delete</span>
             </td>
 
 
