--- a/src/app/shared/crud/alert-dialog-success/alert-dialog-success.component.html
+++ b/src/app/shared/crud/alert-dialog-success/alert-dialog-success.component.html
@@ -19,7 +19,7 @@
     <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
       <div class="kt-form__actions kt-form__actions--sm mt-4">
         <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
-        <button mat-button (click)="onNoClick()" class="btn btn-success btn-block" color="primary" cdkFocusInitial [disabled]="viewLoading">OK</button>
+        <button mat-button (click)="onNoClick()" class="btn btn-success btn-block bg-green" color="primary" cdkFocusInitial [disabled]="viewLoading">OK</button>
       </div>
     </div>
   </div>
