--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -540,3 +540,15 @@ mat-header-cell{
     margin-bottom: 0px;
   }
 }
+
+.mat-tab-group{
+.mat-tab-body-wrapper{
+.mat-tab-body{
+.mat-tab-body-content{
+  padding: 16px 0px;
+  overflow-x: hidden;
+
+ }
+}
+}
+}
