--- a/src/app/modules/loan/cl-customers/cl-customers.component.html
+++ b/src/app/modules/loan/cl-customers/cl-customers.component.html
@@ -49,13 +49,14 @@
             <mat-error *ngIf="hasError('Relationship', 'required')">Relationship is <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
-        <div class="col-lg-2 kt-margin-bottom-20-mobile">
+        <div class="col-lg-12  kt-margin-bottom-20-mobile flex">
           <button class=" mb-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" color="primary" (click)="searchCustomer()" type="button"><mat-icon class="mr-2">add</mat-icon> Attach</button>
           <!--<button type="button" class="btn btn-primary mt-10p" mat-raised-button color="primary" >
             Search
           </button>-->
+            <a  class=" mx-3 self-center cursor-pointer text-green" (click)="viewCustomer()">Search Cutomer </a>
         </div>
-          <a (click)="viewCustomer()">Search Cutomer </a>
+
 
       </div>
       <div class="form-group kt-form__group row">
